--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <h4>Ingressantes de 2023 -  média 7 para aprovação (min 6,7 para arrendondar)</h4>
         <h4>Ingressantes antes de 2023 -  média 6 para aprovação (min 5,7 para arrendondar)</h4>
         <div class="container"><form id="calcG">
-            <input type="number" id="num1G" placeholder="Nota prova">
-            <input type="number" id="num2G" placeholder="Nota pim" >
-            <input type="number" id="num3G" placeholder="Nota AVA">   
+            <input type="number" id="num1G" step="0.1" placeholder="Nota prova">
+            <input type="number" id="num2G" step="0.1" placeholder="Nota pim" >
+            <input type="number" id="num3G" step="0.1" placeholder="Nota AVA">   
             <button class="btn1" type="submit">Calcular</button> 
     </form>
         <h3 class="resultadoG">Resultado: <span id="result"></span></h3>
@@ -58,7 +58,7 @@
 <h3 class="resultadoG">Resultado: <span id="result2"></span></h3>
 </div>
 
-<footer>CALCULADORA NÃO OFICIAL DA UNIP</footer>
+<footer>CALCULADORA NÃO OFICIAL DA UNIP | DESIGN BY YASMIN</footer>
 
     <script src="script.js"></script>
 </body>
