--- a/index.html
+++ b/index.html
@@ -11,54 +11,57 @@
     <header>
         <nav class="nav-bar">
             <p class="textnav">PRO UNIP: EDUCAÇÃO COLABORATIVA</p>
-           </ul>
         </nav>     
     </header>
-        <h2>Calculadora gestão - Tecnologia</h2>
-        <h4>Ingressantes de 2023 -  média 7 para aprovação (min 6,7 para arrendondar)</h4>
-        <h4>Ingressantes antes de 2023 -  média 6 para aprovação (min 5,7 para arrendondar)</h4>
-        <div class="container"><form id="calcG">
+    <h2>Calculadora gestão - Tecnologia</h2>
+    <h4>Ingressantes de 2023 -  média 7 para aprovação (min 6,7 para arredondar)</h4>
+    <h4>Ingressantes antes de 2023 -  média 6 para aprovação (min 5,7 para arredondar)</h4>
+    <div class="container">
+        <form id="calcG">
             <input type="number" id="num1G" step="0.1" placeholder="Nota prova">
-            <input type="number" id="num2G" step="0.1" placeholder="Nota pim" >
-            <input type="number" id="num3G" step="0.1" placeholder="Nota AVA">   
+            <input type="number" id="num2G" step="0.1" placeholder="Nota pim">
+            <input type="number" id="num3G" step="0.1" placeholder="Nota AVA">
             <button class="btn1" type="submit">Calcular</button> 
-    </form>
+        </form>
         <h3 class="resultadoG">Resultado: <span id="result"></span></h3>
-</div>
-        <h2>Calculadora Exame</h2>
-        <h4>Média para aprovação - 5 (Min para arrendondar 4,75)</h4>
-        <div class="container"><form id="calcExame">
+    </div>
+
+    <h2>Calculadora Exame</h2>
+    <h4>Média para aprovação - 5 (Min para arredondar 4,75)</h4>
+    <div class="container">
+        <form id="calcExame">
             <input type="number" id="num1E" step="0.1" placeholder="Média Final">
-            <input type="number" id="num2E"step="0.1" placeholder="Nota Exame" > 
+            <input type="number" id="num2E" step="0.1" placeholder="Nota Exame">
             <button class="btn2" type="submit">Calcular</button> 
-    </form>
+        </form>
         <h3 class="resultadoG">Resultado: <span id="result1"></span></h3>
-</div>
+    </div>
 
-</div>
-<h2>Calculadora gradução - Bacharelado/Licenciatura</h2>
-<h4>Ingressantes de 2023 -  média 7 para aprovação (min 6,7 para arrendondar)</h4>
-        <h4>Ingressantes antes de 2023 -  média 6 para aprovação (min 5,7 para arrendondar)</h4>
-<div class="container"><form id="calcBL">
-    <input type="number" id="num1BL" step="0.1" placeholder="Nota prova">
-    <input type="number" id="num2BL"step="0.1" placeholder="Nota AVA" > 
-    <button class="btn2" type="submit">Calcular</button> 
-</form>
-<h3 class="resultadoG">Resultado: <span id="result2"></span></h3>
-</div>
+    <h2>Calculadora graduação - Bacharelado/Licenciatura</h2>
+    <h4>Ingressantes de 2023 -  média 7 para aprovação (min 6,7 para arredondar)</h4>
+    <h4>Ingressantes antes de 2023 -  média 6 para aprovação (min 5,7 para arredondar)</h4>
+    <div class="container">
+        <form id="calcBL">
+            <input type="number" id="num1BL" step="0.1" placeholder="Nota prova">
+            <input type="number" id="num2BL" step="0.1" placeholder="Nota AVA">
+            <button class="btn2" type="submit">Calcular</button> 
+        </form>
+        <h3 class="resultadoG">Resultado: <span id="result2"></span></h3>
+    </div>
 
-<h2>Calculadora cursos flex - Disciplinas sem aula prática</h2>
-<h4>Ingressantes de 2023 -  média 7 para aprovação (min 6,7 para arrendondar)</h4>
-        <h4>Ingressantes antes de 2023 -  média 6 para aprovação (min 5,7 para arrendondar)</h4>
-<div class="container"><form id="calcF">
-    <input type="number" id="numF" step="0.1" placeholder="Nota prova">
-    <input type="number" id="numF"step="0.1" placeholder="Nota AVA" > 
-    <button class="btn2" type="submit">Calcular</button> 
-</form>
-<h3 class="resultadoG">Resultado: <span id="result2"></span></h3>
-</div>
+    <h2>Calculadora cursos flex - Disciplinas sem aula prática</h2>
+    <h4>Ingressantes de 2023 -  média 7 para aprovação (min 6,7 para arredondar)</h4>
+    <h4>Ingressantes antes de 2023 -  média 6 para aprovação (min 5,7 para arredondar)</h4>
+    <div class="container">
+        <form id="calcF">
+            <input type="number" id="numF" step="0.1" placeholder="Nota prova">
+            <input type="number" id="numF" step="0.1" placeholder="Nota AVA">
+            <button class="btn2" type="submit">Calcular</button> 
+        </form>
+        <h3 class="resultadoG">Resultado: <span id="result2"></span></h3>
+    </div>
 
-<footer>CALCULADORA NÃO OFICIAL DA UNIP | DESIGN BY YASMIN</footer>
+    <footer>CALCULADORA NÃO OFICIAL DA UNIP | DESIGN BY YASMIN</footer>
 
     <script src="script.js"></script>
 </body>
